Fixed margin problems that made the scrollbar apear, but was not needed

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ h1{
     padding: 1rem;
     margin-top: 25vh;
     font-size: 3rem;
+    padding-top: 25vh;
 }
 
 kbd{
